Added Sass to the css, changed pictues and heading sizes

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <title>Coffee Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/my-styles.css" rel="stylesheet" media="screen">
+    <link href="css/styles.css" rel="stylesheet" media="screen">
     <script src="https://use.edgefonts.net/m-1m:n1,n2,n5.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -56,10 +56,7 @@
     <div class="middle-content">
       <div class="row text-center">
       <h2 class="main-font">Who We Are</h2>
-        <div class="first-coffee-pic col-md-6 hidden-xs hidden-sm">
-          <img class="img-responsive img-rounded" src="https://download.unsplash.com/44/E5KMvPp9SsCnqmEGUwAS_2014-08-10%2012.56.40%201.jpg">
-        </div>
-        <div class="main-about col-md-6 col-sm-12">
+        <div class="main-about col-sm-12">
           <p class="lead">
             We are a coffee shop that was established in 2015. Out baristas have years of expericence
             in the coffee world, we hire only the best of baristas who can personally make your drink
@@ -84,7 +81,7 @@
           <h2 class="main-font">Currents Events</h2>
           <div class="events">
             <div class="event-photo col-md-6 hidden-xs hidden-sm">
-              <img class="img-responsive img-rounded" src="https://download.unsplash.com/photo-1416339442236-8ceb164046f8">
+              <img class="img-responsive img-rounded" src="https://images.unsplash.com/photo-1445116572660-236099ec97a0?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=d1a1a681f3e9c92256678e3d2abbc7b0">
             </div>
             <div class="col-sm-12 col-md-6">
               <h3 class="event-header main-font">Consectetur Adipiscing Elit</h3>
@@ -108,7 +105,7 @@
       <div class="row text-center current-events">
           <div class="events">
             <div class="event-photo col-md-6 hidden-xs hidden-sm">
-              <img class="img-responsive img-rounded" src="https://download.unsplash.com/photo-1429032021766-c6a53949594f">
+              <img class="img-responsive img-rounded" src="https://images.unsplash.com/photo-1452776145041-517a74be1f14?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=ae9b5e14b967ed4dd9c46c8e7a847a40">
             </div>
             <div class="col-sm-12 col-md-6">
               <h3 class="event-header main-font">Consectetur Adipiscing Elit</h3>
@@ -132,7 +129,7 @@
       <div class="row text-center current-events">
           <div class="events">
             <div class="event-photo col-md-6 hidden-xs hidden-sm">
-              <img class="img-responsive img-rounded" src="https://download.unsplash.com/45/QDSMoAMTYaZoXpcwBjsL__DSC0104-1.jpg">
+              <img class="img-responsive img-rounded" src="https://images.unsplash.com/photo-1455146106369-1e31beb07fce?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=0dcb0cda867d2beca744db2d7c73578c">
             </div>
             <div class="col-sm-12 col-md-6">
               <h3 class="event-header main-font">Consectetur Adipiscing Elit</h3>
