--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <title>Coffee Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/my-styles.css" rel="stylesheet" media="screen">
+    <link href="css/styles.css" rel="stylesheet" media="screen">
     <script src="https://use.edgefonts.net/m-1m:n1,n2,n5.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
