--- a/lab.html
+++ b/lab.html
@@ -4,7 +4,7 @@
     <title>Coffee Lab</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" lang="en">
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/my-styles.css" rel="stylesheet" media="screen">
+    <link href="css/styles.css" rel="stylesheet" media="screen">
     <script src="https://use.edgefonts.net/m-1m:n1,n2,n5.js"></script>
     <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!--[if lt IE 9]>
@@ -61,8 +61,8 @@
              Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt
              mollit anim id est laborum."
           </p>
-          <img class="img-rounded img-responsive col-sm-12" src="https://images.unsplash.com/uploads/141132428651583f8c0fd/5cde60f6?q=80&fm=jpg&s=6aa5b615e505b30a804d955304a988cf">
-      </div>
+          <img class="img-rounded img-responsive col-sm-12" src=" https://images.unsplash.com/photo-1414808549009-35951c724e9f?ixlib=rb-0.3.5&q=80&fm=jpg&crop=entropy&s=3848c634ba3e662313d15217629fc122">
+      </div>         
     </div>
 
           <!-- End Middle Content -->
