adding dropdown menu for page

--- a/lab.html
+++ b/lab.html
@@ -25,7 +25,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a  href="products.html">Products</a></li>
                 <li><a  class="active"href="#">The Lab</a></li>
-                <li><a class="nav-last-child" href="#">Contact</a></li>
+                <li><a class="nav-last-child" href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
