--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="products.html">Products</a></li>
               <li><a href="lab.html">The Lab</a></li>
-              <li><a class="nav-last-child" href="#">Contact</a></li>
+              <li><a class="nav-last-child" href="contact.html">Contact</a></li>
             </ul>
           </div>
         </div>
