--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
           <a id="top" class="navbar-brand" href="#">
             Coffee Lab
           </a>
-          <i class="glyphicon glyphicon-align-justify pull-right menu-btn"></i>
+          <i class="glyphicon glyphicon-align-justify pull-right menu-open menu-close"></i>
             <ul class="nav navbar-nav pull-right">
               <li><a href="index.html">Home</a></li>
               <li><a href="products.html">Products</a></li>
