--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
           <a id="top" class="navbar-brand" href="#">
             Coffee Lab
           </a>
+          <i class="glyphicon glyphicon-align-justify pull-right menu-open"></i>
+          <i class="glyphicon glyphicon-remove pull-right menu-close"></i>
             <ul class="nav navbar-nav pull-right">
               <li><a class="active" href="index.html">Home</a></li>
               <li><a href="products.html">Products</a></li>
