--- a/lab.html
+++ b/lab.html
@@ -14,13 +14,14 @@
   </head>
     <body class="container">
       <!-- Header and Main Navigation -->
-
       <header class="main-header">
         <div class="navbar navbar-static-top main-font">
           <div class="container navbar-default">
             <a id="top" class="navbar-brand" href="#">
               Coffee Lab
             </a>
+            <i class="glyphicon glyphicon-align-justify pull-right menu-open"></i>
+            <i class="glyphicon glyphicon-remove pull-right menu-close"></i>
               <ul class="nav navbar-nav pull-right">
                 <li><a href="index.html">Home</a></li>
                 <li><a  href="products.html">Products</a></li>
