--- a/products.html
+++ b/products.html
@@ -21,6 +21,8 @@
             <a id="top" class="navbar-brand" href="#">
               Coffee Lab
             </a>
+            <i class="glyphicon glyphicon-align-justify pull-right menu-open"></i>
+            <i class="glyphicon glyphicon-remove pull-right menu-close"></i>
               <ul class="nav navbar-nav pull-right">
                 <li><a href="index.html">Home</a></li>
                 <li><a  class="active" href="products.html">Products</a></li>
